# JNIExamples

./: .gitignore  README.md
app/: build.gradle
app/src/androidTest/java/com/alan/jniexamples/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/business/: MediaServer.cpp  MediaServer.h
app/src/main/cpp/common/: Common.h  JNIHelper.cpp  JNIHelper.h  Log.h  common.h
app/src/main/cpp/dynamic/: JNIOnLoad.cpp  MediaServer.cpp  MediaServer.h  MediaServerDynamicJNI.cpp  MediaServerDynamicJNI.h  NativeDynamicJNI.cpp
app/src/main/cpp/static/: MediaServerStaticJNI.cpp  MediaServerStaticJNI.h  NativeStaticJNI.cpp  NativeStaticJNI.h
app/src/main/java/com/alan/jniexamples/: MainActivity.java
app/src/main/java/com/alan/jniexamples/common/: MediaInfo.java  MediaParam.java  MediaServerCallback.java
app/src/main/java/com/alan/jniexamples/dynamic/: MediaServerDynamic.java  NativeDynamic.java
app/src/main/java/com/alan/jniexamples/jnistatic/: MediaServerStatic.java  NativeStatic.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/alan/jniexamples/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
